27 October 2009: Wouter
	- iana portlist updated.

8 October 2009: Wouter
	- please doxygen
	- add val-log-level print to corner case (nameserver.epost.bg).
	- more detail to errors from insecure delegation checks.
	- Fix double time subtraction in negative cache reported by 
	  Amanda Constant and Hugh Mahon.
	- Made new validator error string available from libunbound for
	  applications.  It is in result->why_bogus, a zero-terminated string.
	  unbound-host prints it by default if a result is bogus.
	  Also the errinf is public in module_qstate (for other modules).

7 October 2009: Wouter
	- retry for validation failure in DS and prime results. Less mem use.
	  unit test.  Provisioning in other tests for requeries.
	- retry for validation failure in DNSKEY in middle of chain of trust.
	  unit test.
	- retry for empty non terminals in chain of trust and unit test.
	- Fixed security bug where the signatures for NSEC3 records were not
	  checked when checking for absence of DS records.  This could have
	  enabled the substitution of an insecure delegation.
	- moved version number to 1.4.0 because of 1.3.4 release with only
	  the NSEC3 patch from the entry above.
	- val-log-level: 2 shows extended error information for validation
	  failures, but still one (longish) line per failure.  For example:
	  validation failure <example.com. DNSKEY IN>: signature expired from
	  192.0.2.4 for trust anchor example.com. while building chain of trust
	  validation failure <www.example.com. A IN>: no signatures from
	  192.0.2.6 for key example.com. while building chain of trust

6 October 2009: Wouter
	- Test set updated to provide additional ns lookup result.
	  The retry would attempt to fetch the data from other nameservers
	  for bogus data, and this needed to be provisioned in the tests.

5 October 2009: Wouter
	- first validation failure retry code.  Retries for data failures.
	  And unit test.

2 October 2009: Wouter
	- improve 5011 modularization.